add animation& js

--- a/reservation.html
+++ b/reservation.html
@@ -48,7 +48,7 @@
             <a href="about.html"><h4>關於品茶吧</h4></a>
           </li>
           <li>
-            <a href="#"><h4>服務項目</h4></a>
+            <a href="tea.html"><h4>服務項目</h4></a>
             <ol>
               <li>
                 <a href="tea.html"><h4>台灣紅茶</h4></a>
@@ -90,22 +90,6 @@
       <!-- content_left -->
       <section class="content_wrapper2">
         <div class="content_left">
-          <!-- <ul>
-          <li>
-            <h2>經營理念</h2>
-            <p>
-              品茶吧，就如同字面上的意思，希望能夠為喜好喝茶以及愛好茶文化的人們，提供一個舒適的品茶空間。
-              <br /><br />
-              而我們的茶都是台灣在地的高品質紅茶，產地分布於南投、花蓮及阿里山等地。
-              <br /><br />
-              期望每位來過品茶吧的客人，都能在這個小小空間裡放鬆地享受品茶片刻。
-            </p>
-          </li>
-          <li>
-            <img src="img/about/top.png" alt="" />
-            <span class="top_block"></span>
-          </li>
-        </ul> -->
           <h4>
             <p>
               【預約注意事項】 <br /><br />
@@ -132,7 +116,7 @@
         <div class="content_right">
           <h4>
             <ul>
-              <!-- 姓名 -->
+              <!-- input1 -->
               <li>
                 <p>訂位人姓名</p>
                 <input type="text" class="name" />
@@ -142,32 +126,35 @@
                 >
                 <span><input type="radio" class="male" name="XXX" /> 先生</span>
               </li>
-              <!-- 電話 -->
+              <!-- input2 -->
               <li>
                 <p>手機號碼</p>
                 <input type="text" class="phone" />
               </li>
-              <!-- 地址 -->
+              <!-- input3 -->
               <li>
                 <p>電子信箱</p>
                 <input type="text" class="email" />
               </li>
-              <!-- 姓別 -->
+              <!-- input4 -->
               <li>
                 <ol>
+                  <!-- input4.1 -->
                   <li>
                     <p>品茶日期</p>
                     <input type="date" class="date" style="color: #573e1a" />
                   </li>
-                  <!-- 訂閱 -->
+                  <!-- input4.2 -->
                   <li>
                     <p>品茶時段</p>
                     <input type="time" class="time" style="color: #573e1a" />
                   </li>
                 </ol>
+                <!-- input5 -->
               </li>
               <li>
                 <ol>
+                  <!-- input5.1 -->
                   <li>
                     <p>品茶人數</p>
                     <select class="partysize" style="color: #573e1a">
@@ -180,6 +167,7 @@
                       <option>6位</option>
                     </select>
                   </li>
+                  <!-- input5.2 -->
                   <li>
                     <p>分店選擇</p>
                     <select class="store" style="color: #573e1a">
@@ -191,7 +179,7 @@
                   </li>
                 </ol>
               </li>
-              <!-- 建議 -->
+              <!-- input6 -->
               <li>
                 <p>其他備註</p>
                 <textarea
@@ -202,7 +190,7 @@
                   placeholder="有任何特殊需求嗎？可以先寫在這裡喔！（例如：行動不便、過敏）"
                 ></textarea>
               </li>
-              <!-- 送出 -->
+              <!-- input7 -->
               <li>
                 <input type="submit" class="send" value="確認訂位" />
               </li>
@@ -239,11 +227,11 @@
         <div class="section_right">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="">關於品茶吧</a></li>
-            <li><a href="">服務項目</a></li>
-            <li><a href="">預約品茶</a></li>
-            <li><a href="">最新消息</a></li>
-            <li><a href="">小茶識</a></li>
+            <li><a href="about.html">關於品茶吧</a></li>
+            <li><a href="tea.html">服務項目</a></li>
+            <li><a href="reservation.html">預約品茶</a></li>
+            <li><a href="news.html">最新消息</a></li>
+            <li><a href="knowledge.html">小茶識</a></li>
           </ul>
           <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
         </div>
@@ -251,7 +239,7 @@
       <!-- footer_bottom -->
       <div class="section_bottom">
         <p>
-          本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。
+          本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
         </p>
       </div>
     </footer>
