--- a/space.html
+++ b/space.html
@@ -48,7 +48,7 @@
             <a href="about.html"><h4>關於品茶吧</h4></a>
           </li>
           <li>
-            <a href="#"><h4>服務項目</h4></a>
+            <a href="tea.html"><h4>服務項目</h4></a>
             <ol>
               <li>
                 <a href="tea.html"><h4>台灣紅茶</h4></a>
@@ -101,7 +101,9 @@
         />
 
         <!-- taipei -->
-        <label for="tab1" class="tabs__label"><h2 class="taipei">台北</h2></label>
+        <label for="tab1" class="tabs__label"
+          ><h2 class="taipei">台北</h2></label
+        >
         <div class="tabs__content">
           <h2>台北本店</h2>
           <ul class="top">
@@ -143,7 +145,9 @@
 
         <!-- taichung -->
         <input type="radio" class="tabs__radio" name="tabs-example" id="tab2" />
-        <label for="tab2" class="tabs__label"><h2 class="taichung">台中</h2></label>
+        <label for="tab2" class="tabs__label"
+          ><h2 class="taichung">台中</h2></label
+        >
         <div class="tabs__content">
           <h2>台中勤美店</h2>
           <ul class="top">
@@ -185,7 +189,9 @@
 
         <!-- kaohsiung -->
         <input type="radio" class="tabs__radio" name="tabs-example" id="tab3" />
-        <label for="tab3" class="tabs__label"><h2 class="kaohsiung">高雄</h2></label>
+        <label for="tab3" class="tabs__label"
+          ><h2 class="kaohsiung">高雄</h2></label
+        >
         <div class="tabs__content">
           <h2>高雄駁二店</h2>
           <ul class="top">
@@ -253,11 +259,11 @@
         <div class="section_right">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="">關於品茶吧</a></li>
-            <li><a href="">服務項目</a></li>
-            <li><a href="">預約品茶</a></li>
-            <li><a href="">最新消息</a></li>
-            <li><a href="">小茶識</a></li>
+            <li><a href="about.html">關於品茶吧</a></li>
+            <li><a href="tea.html">服務項目</a></li>
+            <li><a href="reservation.html">預約品茶</a></li>
+            <li><a href="news.html">最新消息</a></li>
+            <li><a href="knowledge.html">小茶識</a></li>
           </ul>
           <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
         </div>
@@ -265,7 +271,7 @@
       <!-- footer_bottom -->
       <div class="section_bottom">
         <p>
-          本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。
+          本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
         </p>
       </div>
     </footer>
