--- a/knowledge.html
+++ b/knowledge.html
@@ -31,7 +31,7 @@
             <ul>
                 <li><a href="about.html"><h4>關於品茶吧</h4></a></li>
                 <li>
-                    <a href="#"><h4>服務項目</h4></a>
+                    <a href="tea.html"><h4>服務項目</h4></a>
                     <ol>
                         <li><a href="tea.html"><h4>台灣紅茶</h4></a></li>
                         <li><a href="space.html"><h4>品茶空間</h4></a></li>
@@ -143,40 +143,48 @@
     </section>
     <!-- content end-->
 
-    <!-- footer start-->
-    <footer>
-        <div class="footer_wrapper">
-            <!-- footer_left -->
-            <div class="section_left">
-                <ul>
-                    <li><h5>品茶吧(本店)</h5></li>
-                    <li>台北市信義區光復南路133號<br>(捷運市政府站4號出口)</li>
-                    <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
-                    <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
-                    <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
-                </ul>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw" width="280" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                
-            </div>
-            <!-- footer_right -->
-            <div class="section_right">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="">關於品茶吧</a></li>
-                    <li><a href="">服務項目</a></li>
-                    <li><a href="">預約品茶</a></li>
-                    <li><a href="">最新消息</a></li>
-                    <li><a href="">小茶識</a></li>
-                </ul>
-                <a href="index.html"><img src="img/logo_white.svg" alt=""></a>
-            </div>
-        </div>
-        <!-- footer_bottom -->
-        <div class="section_bottom">
-            <p>本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。</p>
-        </div>
-    
-    </footer>
-    <!-- footer end-->
+<!-- footer start-->
+<footer>
+    <div class="footer_wrapper">
+      <!-- footer_left -->
+      <div class="section_left">
+        <ul>
+          <li><h5>品茶吧(本店)</h5></li>
+          <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
+          <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
+          <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
+          <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
+        </ul>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
+          width="280"
+          height="200"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+      <!-- footer_right -->
+      <div class="section_right">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">關於品茶吧</a></li>
+          <li><a href="tea.html">服務項目</a></li>
+          <li><a href="reservation.html">預約品茶</a></li>
+          <li><a href="news.html">最新消息</a></li>
+          <li><a href="knowledge.html">小茶識</a></li>
+        </ul>
+        <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
+      </div>
+    </div>
+    <!-- footer_bottom -->
+    <div class="section_bottom">
+      <p>
+        本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
+      </p>
+    </div>
+  </footer>
+  <!-- footer end-->
 </body>
 </html>
