--- a/reservation.html
+++ b/reservation.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reservation.css" />
-    <title>品茶吧</title>
+    <title>預約品茶</title>
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
