modify about and reservation style

--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
             </p>
           </li>
           <li>
-            <img src="img/about/top.png" alt="" />
+            <img src="img/about/Rectangle 20.png" alt="" />
             <span class="top_block"></span>
           </li>
         </ul>
@@ -120,7 +120,7 @@
             </p>
           </li>
           <li>
-            <img src="img/about/bottom.png" alt="" />
+            <img src="img/about/Rectangle 21.png" alt="" />
             <span class="bottom_block"></span>
           </li>
         </ul>
