update after first project report

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
 
     <!-- banner start-->
     <div class="banner">
-      <div class="banner_text">
-        <h2>是時候該放鬆來一杯茶了</h2>
-        <a href="reservation.html">預約品茶</a>
+      <div class="banner_text_wrapper">
+        <div class="banner_text">
+          <h2>是時候該放鬆來一杯茶了</h2>
+          <a href="reservation.html">預約品茶</a>
+        </div>
       </div>
     </div>
     <!-- banner end-->
@@ -185,7 +187,7 @@
       </div>
     </footer>
     <!-- footer end-->
-    
+
     <script src="js/slider.js"></script>
   </body>
 </html>
