--- a/space.html
+++ b/space.html
@@ -43,6 +43,7 @@
     <header>
       <div class="header_wrapper">
         <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
+        <i class="fa fa-bars" aria-hidden="true"></i>
         <ul>
           <li>
             <a href="about.html"><h4>關於品茶吧</h4></a>
