--- a/space.html
+++ b/space.html
@@ -1,111 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/space.css" />
-    <title>品茶空間</title>
 
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/space.css" />
+  <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
+  <title>品茶空間</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+TC&display=swap" rel="stylesheet" />
 
-    <!-- title icon -->
-    <link rel="icon" href="img/LOGO.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
+    rel="stylesheet" />
 
-    <!-- FontAwesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <!-- header start-->
-    <header>
-      <div class="header_wrapper">
-        <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
-        <i class="fa fa-bars" aria-hidden="true"></i>
+  <!-- title icon -->
+  <link rel="icon" href="img/LOGO.ico" type="image/x-icon" />
+
+  <!-- FontAwesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <div class="overlay"></div>
+  <!-- header start-->
+  <header>
+    <div class="header_wrapper">
+      <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
+
+      <div class="nav_wrapper">
+      <div class="hamburger-menu">
+        <div class="bar"></div>
+      </div>
+
+      <nav class="mobile-menu">
         <ul>
           <li>
-            <a href="about.html"><h4>關於品茶吧</h4></a>
+            <a href="about.html">
+              <h4>關於品茶吧</h4>
+            </a>
           </li>
-          <li>
-            <a href="tea.html"><h4>服務項目</h4></a>
-            <ol>
+          <li class="has-children">
+            <a href="#">
+              <h4>服務項目</h4><span class="icon-arrow"></span>
+            </a>
+            <ol class="children">
               <li>
-                <a href="tea.html"><h4>台灣紅茶</h4></a>
+                <a href="tea.html">
+                  <h4>台灣紅茶</h4>
+                </a>
               </li>
               <li>
-                <a href="space.html"><h4>品茶空間</h4></a>
+                <a href="space.html">
+                  <h4>品茶空間</h4>
+                </a>
               </li>
             </ol>
           </li>
           <li>
-            <a href="reservation.html"><h4>預約品茶</h4></a>
+            <a href="reservation.html">
+              <h4>預約品茶</h4>
+            </a>
           </li>
           <li>
-            <a href="news.html"><h4>最新消息</h4></a>
+            <a href="news.html">
+              <h4>最新消息</h4>
+            </a>
           </li>
           <li>
-            <a href="knowledge.html"><h4>小茶識</h4></a>
+            <a href="knowledge.html">
+              <h4>小茶識</h4>
+            </a>
           </li>
         </ul>
-      </div>
-    </header>
-    <!-- header end-->
-
-    <!-- title start-->
-    <div class="title">
-      <div class="title_wrapper">
-        <h1>品茶空間</h1>
-      </div>
+      </nav>
     </div>
-    <!-- title end-->
+    </div>
+  </header>
+  <!-- header end-->
 
-    <!-- content start-->
-    <section class="content_wrapper">
-      <!-- content_crumb -->
+  <!-- title start-->
+  <div class="title">
+    <div class="title_wrapper">
+      <h1>品茶空間</h1>
+    </div>
+  </div>
+  <!-- title end-->
 
-      <ul class="content_crumb">
-        <li><a href="index.html">首頁</a></li>
-        <li><a href="#">服務項目</a></li>
-        <li><a href="space.html">品茶空間</a></li>
-      </ul>
+  <!-- content start-->
+  <section class="content_wrapper">
+    <!-- content_crumb -->
 
-      <!-- content_top -->
-      <div class="tabs">
-        <input
-          type="radio"
-          class="tabs__radio"
-          name="tabs-example"
-          id="tab1"
-          checked
-        />
+    <ul class="content_crumb">
+      <li><a href="index.html">首頁</a></li>
+      <li><a href="#">服務項目</a></li>
+      <li><a href="space.html">品茶空間</a></li>
+    </ul>
 
-        <!-- taipei -->
-        <label for="tab1" class="tabs__label"
-          ><h2 class="taipei">台北</h2></label
-        >
-        <div class="tabs__content">
+    <!-- content_top -->
+
+    <div class="tabs">
+      <ul id="tabs-nav">
+        <li><a href="#tab1">
+            <h2 class="taipei">台北</h2>
+          </a></li>
+        <li><a href="#tab2">
+            <h2 class="taichung">台中</h2>
+          </a></li>
+        <li><a href="#tab3">
+            <h2 class="kaohsiung">高雄</h2>
+          </a></li>
+      </ul> <!-- END tabs-nav -->
+      <div id="tabs-content">
+        <div id="tab1" class="tab-content">
           <h2>台北本店</h2>
           <ul class="top">
             <li><img src="img/space/tp1.png" alt="" /></li>
@@ -117,13 +132,8 @@
             <li>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1667128033871!5m2!1szh-TW!2stw"
-                width="560"
-                height="312"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+                width="560" height="312" style="border: 0" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </li>
             <li>
               <ol>
@@ -143,13 +153,7 @@
             </li>
           </ul>
         </div>
-
-        <!-- taichung -->
-        <input type="radio" class="tabs__radio" name="tabs-example" id="tab2" />
-        <label for="tab2" class="tabs__label"
-          ><h2 class="taichung">台中</h2></label
-        >
-        <div class="tabs__content">
+        <div id="tab2" class="tab-content">
           <h2>台中勤美店</h2>
           <ul class="top">
             <li><img src="img/space/tc1.png" alt="" /></li>
@@ -161,13 +165,8 @@
             <li>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14562.328983377582!2d120.6640025!3d24.1513049!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6f9d8ebd38727566!2z5Yuk576OIOiqoOWTgee2oOWckumBkw!5e0!3m2!1szh-TW!2stw!4v1667130323154!5m2!1szh-TW!2stw"
-                width="560"
-                height="312"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+                width="560" height="312" style="border: 0" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </li>
             <li>
               <ol>
@@ -187,13 +186,7 @@
             </li>
           </ul>
         </div>
-
-        <!-- kaohsiung -->
-        <input type="radio" class="tabs__radio" name="tabs-example" id="tab3" />
-        <label for="tab3" class="tabs__label"
-          ><h2 class="kaohsiung">高雄</h2></label
-        >
-        <div class="tabs__content">
+        <div id="tab3" class="tab-content">
           <h2>高雄駁二店</h2>
           <ul class="top">
             <li><img src="img/space/kh1.png" alt="" /></li>
@@ -205,13 +198,8 @@
             <li>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14731.624517256407!2d120.2815287!3d22.6199803!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe6d6d1bd1c764df2!2z6aeB5LqM6Jed6KGT54m55Y2A!5e0!3m2!1szh-TW!2stw!4v1667130121089!5m2!1szh-TW!2stw"
-                width="560"
-                height="312"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+                width="560" height="312" style="border: 0" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </li>
             <li>
               <ol>
@@ -231,51 +219,58 @@
             </li>
           </ul>
         </div>
-      </div>
-    </section>
 
-    <!-- footer start-->
-    <footer>
-      <div class="footer_wrapper">
-        <!-- footer_left -->
-        <div class="section_left">
-          <ul>
-            <li><h5>品茶吧(本店)</h5></li>
-            <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
-            <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
-            <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
-            <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
-          </ul>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
-            width="280"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <!-- footer_right -->
-        <div class="section_right">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">關於品茶吧</a></li>
-            <li><a href="tea.html">服務項目</a></li>
-            <li><a href="reservation.html">預約品茶</a></li>
-            <li><a href="news.html">最新消息</a></li>
-            <li><a href="knowledge.html">小茶識</a></li>
-          </ul>
-          <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
-        </div>
+      </div> <!-- END tabs-content -->
+    </div> <!-- END tabs -->
+  </section>
+
+  <!-- footer start-->
+  <footer>
+    <div class="footer_wrapper">
+      <!-- footer_left -->
+      <div class="section_left">
+        <ul>
+          <li>
+            <h5>品茶吧(本店)</h5>
+          </li>
+          <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
+          <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
+          <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
+          <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
+        </ul>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
+          width="280" height="200" style="border: 0" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <!-- footer_bottom -->
-      <div class="section_bottom">
-        <p>
-          本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
-        </p>
+      <!-- footer_right -->
+      <div class="section_right">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">關於品茶吧</a></li>
+          <li><a href="tea.html">服務項目</a></li>
+          <li><a href="reservation.html">預約品茶</a></li>
+          <li><a href="news.html">最新消息</a></li>
+          <li><a href="knowledge.html">小茶識</a></li>
+        </ul>
+        <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
       </div>
-    </footer>
-    <!-- footer end-->
-  </body>
+    </div>
+    <!-- footer_bottom -->
+    <div class="section_bottom">
+      <p>
+        本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
+      </p>
+    </div>
+  </footer>
+  <!-- footer end-->
+
+
+
+
+
+
+  <script src="js/slider.js"></script>
+</body>
+
 </html>
