--- a/tea.html
+++ b/tea.html
@@ -1,183 +1,338 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/tea.css" />
-    <title>台灣紅茶</title>
 
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/tea.css" />
+  <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
+  <title>台灣紅茶</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+TC&display=swap" rel="stylesheet" />
 
-    <!-- title icon -->
-    <link rel="icon" href="img/LOGO.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
+    rel="stylesheet" />
 
-    <!-- FontAwesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <!-- header start-->
-    <header>
-      <div class="header_wrapper">
-        <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
-        <i class="fa fa-bars" aria-hidden="true"></i>
+  <!-- title icon -->
+  <link rel="icon" href="img/LOGO.ico" type="image/x-icon" />
+
+  <!-- FontAwesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <div class="overlay"></div>
+  <!-- header start-->
+  <header>
+    <div class="header_wrapper">
+      <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
+
+      <div class="nav_wrapper">
+      <div class="hamburger-menu">
+        <div class="bar"></div>
+      </div>
+
+      <nav class="mobile-menu">
         <ul>
           <li>
-            <a href="about.html"><h4>關於品茶吧</h4></a>
+            <a href="about.html">
+              <h4>關於品茶吧</h4>
+            </a>
           </li>
-          <li>
-            <a href="tea.html"><h4>服務項目</h4></a>
-            <ol>
+          <li class="has-children">
+            <a href="#">
+              <h4>服務項目</h4><span class="icon-arrow"></span>
+            </a>
+            <ol class="children">
               <li>
-                <a href="tea.html"><h4>台灣紅茶</h4></a>
+                <a href="tea.html">
+                  <h4>台灣紅茶</h4>
+                </a>
               </li>
               <li>
-                <a href="space.html"><h4>品茶空間</h4></a>
+                <a href="space.html">
+                  <h4>品茶空間</h4>
+                </a>
               </li>
             </ol>
           </li>
           <li>
-            <a href="reservation.html"><h4>預約品茶</h4></a>
+            <a href="reservation.html">
+              <h4>預約品茶</h4>
+            </a>
           </li>
           <li>
-            <a href="news.html"><h4>最新消息</h4></a>
+            <a href="news.html">
+              <h4>最新消息</h4>
+            </a>
           </li>
           <li>
-            <a href="knowledge.html"><h4>小茶識</h4></a>
+            <a href="knowledge.html">
+              <h4>小茶識</h4>
+            </a>
           </li>
         </ul>
-      </div>
-    </header>
-    <!-- header end-->
+      </nav>
+    </div>
+    </div>
+  </header>
+  <!-- header end-->
 
-    <!-- title start-->
-    <div class="title">
-      <div class="title_wrapper">
-        <h1>台灣紅茶</h1>
+  <!-- title start-->
+  <div class="title">
+    <div class="title_wrapper">
+      <h1>台灣紅茶</h1>
+    </div>
+  </div>
+  <!-- title end-->
+
+  <!-- content start-->
+  <section class="content_wrapper">
+    <!-- content_crumb -->
+    <ul class="content_crumb">
+      <li><a href="index.html">首頁</a></li>
+      <li><a href="#">服務項目</a></li>
+      <li><a href="tea.html">台灣紅茶</a></li>
+    </ul>
+    <!-- content_tea -->
+    <div class="content_tea">
+      <ul>
+        <li>
+          <button id="modalA" class="modalOpenBtn" onclick="openModal('modalA')">
+            <img src="img/tea/tea1.png" alt="" />
+            <h4>蜜香紅茶</h4>
+          </button>
+          <div id="modalA" class="modal">
+            <div class="modalContent">
+              <span class="modalClose">×</span>
+
+              <img src="img/tea/tea1.png" alt="" />
+
+              <div class="tea_info">
+                <h4>蜜香紅茶</h4>
+                <div class="tea_text">
+
+                  <h5>名稱</h5>
+                  <p>蜜香紅茶，品種為青心柑仔</p>
+                  <h5>產地</h5>
+                  <p>新北市三峽</p>
+                  <h5>特色</h5>
+                  <p>茶葉經小葉綠蟬吮吸茶嫩葉後，帶有天然的蜜香味</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </li>
+        <li>
+          <button id="modalB" class="modalOpenBtn" onclick="openModal('modalB')"><img src="img/tea/tea2.png" alt="" />
+            <h4>紅韻紅茶</h4>
+          </button>
+          <div id="modalB" class="modal">
+            <div class="modalContent">
+              <span class="modalClose">×</span>
+
+              <img src="img/tea/tea2.png" alt="" />
+
+              <div class="tea_info">
+                <h4>紅韻紅茶</h4>
+                <div class="tea_text">
+
+                  <h5>名稱</h5>
+                  <p>紅韻紅茶，為台茶21號
+                  </p>
+                  <h5>產地</h5>
+                  <p>南投縣魚池鄉</p>
+                  <h5>特色</h5>
+                  <p>帶濃郁花果香，還有類似柑橘開花氣息，滋味甘甜鮮爽
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <button id="modalC" class="modalOpenBtn" onclick="openModal('modalC')"><img src="img/tea/tea3.png" alt="" />
+            <h4>紅玉紅茶</h4>
+          </button>
+          <div id="modalC" class="modal">
+            <div class="modalContent">
+              <span class="modalClose">×</span>
+
+              <img src="img/tea/tea3.png" alt="" />
+
+              <div class="tea_info">
+                <h4>紅玉紅茶</h4>
+                <div class="tea_text">
+
+                  <h5>名稱</h5>
+                  <p>紅玉紅茶，為台茶18號</p>
+                  <h5>產地</h5>
+                  <p>南投縣魚池鄉</p>
+                  <h5>特色</h5>
+                  <p>茶湯深紅，帶有獨特薄荷肉桂香。</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <button id="modalD" class="modalOpenBtn" onclick="openModal('modalD')"><img src="img/tea/tea4.png" alt="" />
+            <h4>阿薩姆紅茶</h4>
+          </button>
+          <div id="modalD" class="modal">
+            <div class="modalContent">
+              <span class="modalClose">×</span>
+
+              <img src="img/tea/tea4.png" alt="" />
+
+              <div class="tea_info">
+                <h4>阿薩姆紅茶</h4>
+                <div class="tea_text">
+
+                  <h5>名稱</h5>
+                  <p>阿薩姆紅茶，為台茶8號
+                  </p>
+                  <h5>產地</h5>
+                  <p>南投縣魚池鄉
+                  </p>
+                  <h5>特色</h5>
+                  <p>具印度阿薩姆風味，帶有麥芽香，口感略澀，可純飲或加入牛奶調製成奶茶。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <button id="modalE" class="modalOpenBtn" onclick="openModal('modalE')"><img src="img/tea/tea5.png" alt="" />
+            <h4>金萱紅茶</h4>
+          </button>
+          <div id="modalE" class="modal">
+            <div class="modalContent">
+              <span class="modalClose">×</span>
+
+              <img src="img/tea/tea5.png" alt="" />
+
+              <div class="tea_info">
+                <h4>金萱紅茶</h4>
+                <div class="tea_text">
+
+                  <h5>名稱</h5>
+                  <p>金萱紅茶，為台茶12號</p>
+                  <h5>產地</h5>
+                  <p>嘉義縣阿里山</p>
+                  <h5>特色</h5>
+                  <p>有獨特牛奶香味、花蜜香，入口後先帶苦澀後轉甘醇，帶有甜香。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <button id="modalF" class="modalOpenBtn" onclick="openModal('modalF')"><img src="img/tea/tea6.png" alt="" />
+            <h4>台灣山茶</h4>
+          </button>
+          <div id="modalF" class="modal">
+            <div class="modalContent">
+              <span class="modalClose">×</span>
+
+              <img src="img/tea/tea6.png" alt="" />
+
+              <div class="tea_info">
+                <h4>台灣山茶</h4>
+                <div class="tea_text">
+
+                  <h5>名稱</h5>
+                  <p>台灣山茶</p>
+                  <h5>產地</h5>
+                  <p>嘉義縣阿里山
+                  </p>
+                  <h5>特色</h5>
+                  <p>沖泡出來的茶湯金黃帶紅，亦透露出花香柔美氣息，滋味甘醇溫厚</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!-- content end-->
+
+  <!-- <div id="modalA" class="modal">
+      <div class="modalContent">
+        <span class="modalClose">×</span>
+        <div>
+          Modal A text
+        </div>
+      </div>
+    </div> -->
+
+  <!-- <button id="modalA" class="modalOpenBtn" onclick="openModal('modalA')">Modal A</button>
+  <div id="modalA" class="modal">
+    <div class="modalContent">
+      <span class="modalClose">×</span>
+      <div>
+        Modal A text
       </div>
     </div>
-    <!-- title end-->
+  </div> -->
 
-    <!-- content start-->
-    <section class="content_wrapper">
-      <!-- content_crumb -->
-      <ul class="content_crumb">
-        <li><a href="index.html">首頁</a></li>
-        <li><a href="#">服務項目</a></li>
-        <li><a href="tea.html">台灣紅茶</a></li>
-      </ul>
-      <!-- content_tea -->
-      <div class="content_tea">
+  <!-- footer start-->
+  <footer>
+    <div class="footer_wrapper">
+      <!-- footer_left -->
+      <div class="section_left">
         <ul>
           <li>
-            <a href=""
-              ><img src="img/tea/tea1.png" alt="" />
-              <h4>蜜香紅茶</h4></a
-            >
+            <h5>品茶吧(本店)</h5>
           </li>
-          <li>
-            <a href=""
-              ><img src="img/tea/tea2.png" alt="" />
-              <h4>紅韻紅茶</h4></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><img src="img/tea/tea3.png" alt="" />
-              <h4>紅玉紅茶</h4></a
-            >
-          </li>
+          <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
+          <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
+          <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
+          <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
         </ul>
-
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
+          width="280" height="200" style="border: 0" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <!-- footer_right -->
+      <div class="section_right">
         <ul>
-          <li>
-            <a href=""
-              ><img src="img/tea/tea4.png" alt="" />
-              <h4>阿薩姆紅茶</h4></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><img src="img/tea/tea5.png" alt="" />
-              <h4>金萱紅茶</h4></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><img src="img/tea/tea6.png" alt="" />
-              <h4>台灣山茶</h4></a
-            >
-          </li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">關於品茶吧</a></li>
+          <li><a href="tea.html">服務項目</a></li>
+          <li><a href="reservation.html">預約品茶</a></li>
+          <li><a href="news.html">最新消息</a></li>
+          <li><a href="knowledge.html">小茶識</a></li>
         </ul>
+        <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
       </div>
-    </section>
-    <!-- content end-->
+    </div>
+    <!-- footer_bottom -->
+    <div class="section_bottom">
+      <p>
+        本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
+      </p>
+    </div>
+  </footer>
+  <!-- footer end-->
+  <script src="js/slider.js"></script>
+</body>
 
-    <!-- footer start-->
-    <footer>
-      <div class="footer_wrapper">
-        <!-- footer_left -->
-        <div class="section_left">
-          <ul>
-            <li><h5>品茶吧(本店)</h5></li>
-            <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
-            <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
-            <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
-            <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
-          </ul>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
-            width="280"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <!-- footer_right -->
-        <div class="section_right">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">關於品茶吧</a></li>
-            <li><a href="tea.html">服務項目</a></li>
-            <li><a href="reservation.html">預約品茶</a></li>
-            <li><a href="news.html">最新消息</a></li>
-            <li><a href="knowledge.html">小茶識</a></li>
-          </ul>
-          <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
-        </div>
-      </div>
-      <!-- footer_bottom -->
-      <div class="section_bottom">
-        <p>
-          本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
-        </p>
-      </div>
-    </footer>
-    <!-- footer end-->
-  </body>
 </html>
