modify about rwd

--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
       <h2>嚴選台灣紅茶</h2>
       <ul>
         <li>
-          <a href=""><img src="img/tea/tea1.png" alt="" />
+          <a href="tea.html"><img src="img/tea/tea1.png" alt="" />
             <h4>蜜香紅茶</h4>
           </a>
         </li>
         <li>
-          <a href=""><img src="img/tea/tea2.png" alt="" />
+          <a href="tea.html"><img src="img/tea/tea2.png" alt="" />
             <h4>紅韻紅茶</h4>
           </a>
         </li>
         <li>
-          <a href=""><img src="img/tea/tea3.png" alt="" />
+          <a href="tea.html"><img src="img/tea/tea3.png" alt="" />
             <h4>紅玉紅茶</h4>
           </a>
         </li>
