--- a/reservation.html
+++ b/reservation.html
@@ -39,39 +39,62 @@
     />
   </head>
   <body>
-    <!-- header start-->
-    <header>
-      <div class="header_wrapper">
-        <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
-        <i class="fa fa-bars" aria-hidden="true"></i>
+    <div class="overlay"></div>
+  <!-- header start-->
+  <header>
+    <div class="header_wrapper">
+      <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
+
+      <div class="nav_wrapper">
+      <div class="hamburger-menu">
+        <div class="bar"></div>
+      </div>
+
+      <nav class="mobile-menu">
         <ul>
           <li>
-            <a href="about.html"><h4>關於品茶吧</h4></a>
+            <a href="about.html">
+              <h4>關於品茶吧</h4>
+            </a>
           </li>
-          <li>
-            <a href="tea.html"><h4>服務項目</h4></a>
-            <ol>
+          <li class="has-children">
+            <a href="#">
+              <h4>服務項目</h4><span class="icon-arrow"></span>
+            </a>
+            <ol class="children">
               <li>
-                <a href="tea.html"><h4>台灣紅茶</h4></a>
+                <a href="tea.html">
+                  <h4>台灣紅茶</h4>
+                </a>
               </li>
               <li>
-                <a href="space.html"><h4>品茶空間</h4></a>
+                <a href="space.html">
+                  <h4>品茶空間</h4>
+                </a>
               </li>
             </ol>
           </li>
           <li>
-            <a href="reservation.html"><h4>預約品茶</h4></a>
+            <a href="reservation.html">
+              <h4>預約品茶</h4>
+            </a>
           </li>
           <li>
-            <a href="news.html"><h4>最新消息</h4></a>
+            <a href="news.html">
+              <h4>最新消息</h4>
+            </a>
           </li>
           <li>
-            <a href="knowledge.html"><h4>小茶識</h4></a>
+            <a href="knowledge.html">
+              <h4>小茶識</h4>
+            </a>
           </li>
         </ul>
-      </div>
-    </header>
-    <!-- header end-->
+      </nav>
+    </div>
+    </div>
+  </header>
+  <!-- header end-->
 
     <!-- title start-->
     <div class="title">
