add animation/lightbox2, modify rwd -about/space/knowledge, fix mobile menu/tea modal.

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/about.css" />
+    <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>關於品茶吧</title>
 
     <!-- font -->
@@ -116,7 +118,7 @@
         <ul>
           <li>
             <h2>經營理念</h2>
-            <p>
+            <p data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom">
               品茶吧，就如同字面上的意思，希望能夠為喜好喝茶以及愛好茶文化的人們，提供一個舒適的品茶空間。
               <br /><br />
               而我們的茶都是台灣在地的高品質紅茶，產地分布於南投、花蓮及阿里山等地。
@@ -125,7 +127,7 @@
             </p>
           </li>
           <li>
-            <img src="img/about/Rectangle 20.png" alt="" />
+            <img src="img/about/Rectangle 20.png" alt="" data-aos="fade-up-left" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom"/>
             <span class="top_block"></span>
           </li>
         </ul>
@@ -136,7 +138,7 @@
         <ul>
           <li>
             <h2>我們的特色</h2>
-            <p>
+            <p data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom">
               酒有酒吧，茶也可以有茶吧。<br /><br />
               品茶吧是個能夠與親朋好友們一同前來喝茶談天的好所在，也適合一人前往獨自享受品茶時光。
               <br /><br />
@@ -144,7 +146,7 @@
             </p>
           </li>
           <li>
-            <img src="img/about/Rectangle 21.png" alt="" />
+            <img src="img/about/Rectangle 21.png" alt="" data-aos="fade-up-right" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom"/>
             <span class="bottom_block"></span>
           </li>
         </ul>
@@ -195,5 +197,10 @@
       </div>
     </footer>
     <!-- footer end-->
+    <script src="js/all.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
