--- a/tea.html
+++ b/tea.html
@@ -104,7 +104,7 @@
       <li><a href="tea.html">台灣紅茶</a></li>
     </ul>
     <!-- content_tea -->
-    <div class="content_tea">
+    <div class="content_tea" onclick="void(0);">
       <ul>
         <li>
           <button id="modalA" class="modalOpenBtn" onclick="openModal('modalA')">
@@ -273,25 +273,6 @@
   </section>
   <!-- content end-->
 
-  <!-- <div id="modalA" class="modal">
-      <div class="modalContent">
-        <span class="modalClose">×</span>
-        <div>
-          Modal A text
-        </div>
-      </div>
-    </div> -->
-
-  <!-- <button id="modalA" class="modalOpenBtn" onclick="openModal('modalA')">Modal A</button>
-  <div id="modalA" class="modal">
-    <div class="modalContent">
-      <span class="modalClose">×</span>
-      <div>
-        Modal A text
-      </div>
-    </div>
-  </div> -->
-
   <!-- footer start-->
   <footer>
     <div class="footer_wrapper">
@@ -332,7 +313,7 @@
     </div>
   </footer>
   <!-- footer end-->
-  <script src="js/slider.js"></script>
+  <script src="js/all.js"></script>
 </body>
 
 </html>
