--- a/knowledge.html
+++ b/knowledge.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/knowledge.css">
+    <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
     <title>小茶識</title>
 
         <!-- font -->
@@ -222,5 +223,6 @@
     </div>
   </footer>
   <!-- footer end-->
+  <script src="js/all.js"></script>
 </body>
 </html>
