--- a/reservation.html
+++ b/reservation.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reservation.css" />
+    <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
     <title>預約品茶</title>
 
     <!-- font -->
@@ -40,62 +41,61 @@
   </head>
   <body>
     <div class="overlay"></div>
-  <!-- header start-->
-  <header>
-    <div class="header_wrapper">
-      <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
-
-      <div class="nav_wrapper">
-      <div class="hamburger-menu">
-        <div class="bar"></div>
+    <!-- header start-->
+    <header>
+      <div class="header_wrapper">
+        <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
+  
+        <div class="nav_wrapper">
+        <div class="hamburger-menu">
+          <div class="bar"></div>
+        </div>
+  
+        <nav class="mobile-menu">
+          <ul>
+            <li>
+              <a href="about.html">
+                <h4>關於品茶吧</h4>
+              </a>
+            </li>
+            <li class="has-children">
+              <a href="#">
+                <h4>服務項目</h4><span class="icon-arrow"></span>
+              </a>
+              <ol class="children">
+                <li>
+                  <a href="tea.html">
+                    <h4>台灣紅茶</h4>
+                  </a>
+                </li>
+                <li>
+                  <a href="space.html">
+                    <h4>品茶空間</h4>
+                  </a>
+                </li>
+              </ol>
+            </li>
+            <li>
+              <a href="reservation.html">
+                <h4>預約品茶</h4>
+              </a>
+            </li>
+            <li>
+              <a href="news.html">
+                <h4>最新消息</h4>
+              </a>
+            </li>
+            <li>
+              <a href="knowledge.html">
+                <h4>小茶識</h4>
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
-
-      <nav class="mobile-menu">
-        <ul>
-          <li>
-            <a href="about.html">
-              <h4>關於品茶吧</h4>
-            </a>
-          </li>
-          <li class="has-children">
-            <a href="#">
-              <h4>服務項目</h4><span class="icon-arrow"></span>
-            </a>
-            <ol class="children">
-              <li>
-                <a href="tea.html">
-                  <h4>台灣紅茶</h4>
-                </a>
-              </li>
-              <li>
-                <a href="space.html">
-                  <h4>品茶空間</h4>
-                </a>
-              </li>
-            </ol>
-          </li>
-          <li>
-            <a href="reservation.html">
-              <h4>預約品茶</h4>
-            </a>
-          </li>
-          <li>
-            <a href="news.html">
-              <h4>最新消息</h4>
-            </a>
-          </li>
-          <li>
-            <a href="knowledge.html">
-              <h4>小茶識</h4>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    </div>
-  </header>
-  <!-- header end-->
-
+      </div>
+    </header>
+    <!-- header end-->
     <!-- title start-->
     <div class="title">
       <div class="title_wrapper">
@@ -276,5 +276,6 @@
       </div>
     </footer>
     <!-- footer end-->
+    <script src="js/all.js"></script>
   </body>
 </html>
