--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/index.css" />
   <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
   <title>品茶吧</title>
 
   <!-- font -->
@@ -31,60 +32,60 @@
 </head>
 
 <body>
-
-<div class="overlay"></div>
+  <a id="button"></a>
+  <div class="overlay"></div>
   <!-- header start-->
   <header>
     <div class="header_wrapper">
       <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
 
       <div class="nav_wrapper">
-      <div class="hamburger-menu">
-        <div class="bar"></div>
-      </div>
+        <div class="hamburger-menu">
+          <div class="bar"></div>
+        </div>
 
-      <nav class="mobile-menu">
-        <ul>
-          <li>
-            <a href="about.html">
-              <h4>關於品茶吧</h4>
-            </a>
-          </li>
-          <li class="has-children">
-            <a href="#">
-              <h4>服務項目</h4><span class="icon-arrow"></span>
-            </a>
-            <ol class="children">
-              <li>
-                <a href="tea.html">
-                  <h4>台灣紅茶</h4>
-                </a>
-              </li>
-              <li>
-                <a href="space.html">
-                  <h4>品茶空間</h4>
-                </a>
-              </li>
-            </ol>
-          </li>
-          <li>
-            <a href="reservation.html">
-              <h4>預約品茶</h4>
-            </a>
-          </li>
-          <li>
-            <a href="news.html">
-              <h4>最新消息</h4>
-            </a>
-          </li>
-          <li>
-            <a href="knowledge.html">
-              <h4>小茶識</h4>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+        <nav class="mobile-menu">
+          <ul>
+            <li>
+              <a href="about.html">
+                <h4>關於品茶吧</h4>
+              </a>
+            </li>
+            <li class="has-children">
+              <a href="#">
+                <h4>服務項目</h4><span class="icon-arrow"></span>
+              </a>
+              <ol class="children">
+                <li>
+                  <a href="tea.html">
+                    <h4>台灣紅茶</h4>
+                  </a>
+                </li>
+                <li>
+                  <a href="space.html">
+                    <h4>品茶空間</h4>
+                  </a>
+                </li>
+              </ol>
+            </li>
+            <li>
+              <a href="reservation.html">
+                <h4>預約品茶</h4>
+              </a>
+            </li>
+            <li>
+              <a href="news.html">
+                <h4>最新消息</h4>
+              </a>
+            </li>
+            <li>
+              <a href="knowledge.html">
+                <h4>小茶識</h4>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
   <!-- header end-->
@@ -106,17 +107,17 @@
     <div class="content_tea">
       <h2>嚴選台灣紅茶</h2>
       <ul>
-        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement="center-bottom">
           <a href="tea.html"><img src="img/tea/tea1.png" alt="" />
             <h4>蜜香紅茶</h4>
           </a>
         </li>
-        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement="center-bottom">
           <a href="tea.html"><img src="img/tea/tea2.png" alt="" />
             <h4>紅韻紅茶</h4>
           </a>
         </li>
-        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement="center-bottom">
           <a href="tea.html"><img src="img/tea/tea3.png" alt="" />
             <h4>紅玉紅茶</h4>
           </a>
@@ -131,21 +132,21 @@
     <div class="content_news">
       <h2>最新消息</h2>
       <ul>
-        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
           <a href="">
             <img src="img/news/pic1.png" alt="" />
             <h5>2022-10-18</h5>
             <h4>新品上市 花蓮蜜香紅茶</h4>
           </a>
         </li>
-        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
           <a href="">
             <img src="img/news/pic2.png" alt="" />
             <h5>2022-10-12</h5>
             <h4>SGS檢驗合格 讓您安心品茶</h4>
           </a>
         </li>
-        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
           <a href="">
             <img src="img/news/pic3.png" alt="" />
             <h5>2022-10-01</h5>
