--- a/space.html
+++ b/space.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+  <a id="button"></a>
   <div class="overlay"></div>
   <!-- header start-->
   <header>
@@ -128,9 +129,12 @@
         <div id="tab1" class="tab-content">
           <h2>台北本店</h2>
           <ul class="top">
-            <li><img src="img/space/tp1.png" alt="" /></li>
-            <li><img src="img/space/tp2.png" alt="" /></li>
-            <li><img src="img/space/tp3.png" alt="" /></li>
+            <li><a class="example-image-link" href="img/space/tpb1.jpg" data-lightbox="example-set"
+                data-title="台北本店"><img class="example-image" src="img/space/tp1.png" alt="" /></a></li>
+            <li><a class="example-image-link" href="img/space/tpb2.jpg" data-lightbox="example-set"
+                data-title="台北本店"><img class="example-image" src="img/space/tp2.jpg" alt="" /></a></li>
+            <li><a class="example-image-link" href="img/space/tpb3.jpg" data-lightbox="example-set"
+                data-title="台北本店"><img class="example-image" src="img/space/tp3.jpg" alt="" /></a></li>
           </ul>
 
           <ul class="bottom">
@@ -162,11 +166,11 @@
           <h2>台中勤美店</h2>
           <ul class="top">
             <li><a class="example-image-link" href="img/space/tcb1.jpg" data-lightbox="example-set"
-                data-title="Taichung"><img class="example-image" src="img/space/tc1.jpg" alt="" /></a></li>
+                data-title="台中勤美店"><img class="example-image" src="img/space/tc1.jpg" alt="" /></a></li>
             <li><a class="example-image-link" href="img/space/tcb2.jpg" data-lightbox="example-set"
-                data-title="Taichung"><img class="example-image" src="img/space/tc2.jpg" alt="" /></a></li>
+                data-title="台中勤美店"><img class="example-image" src="img/space/tc2.jpg" alt="" /></a></li>
             <li><a class="example-image-link" href="img/space/tcb3.jpg" data-lightbox="example-set"
-                data-title="Taichung"><img class="example-image" src="img/space/tc3.jpg" alt="" /></a></li>
+                data-title="台中勤美店"><img class="example-image" src="img/space/tc3.jpg" alt="" /></a></li>
           </ul>
 
           <ul class="bottom">
@@ -197,9 +201,12 @@
         <div id="tab3" class="tab-content">
           <h2>高雄駁二店</h2>
           <ul class="top">
-            <li><img src="img/space/kh1.png" alt="" /></li>
-            <li><img src="img/space/kh2.png" alt="" /></li>
-            <li><img src="img/space/kh3.png" alt="" /></li>
+            <li><a class="example-image-link" href="img/space/khb1.jpg" data-lightbox="example-set"
+                data-title="高雄駁二店"><img class="example-image" src="img/space/kh1.jpg" alt="" /></a></li>
+            <li><a class="example-image-link" href="img/space/khb2.jpg" data-lightbox="example-set"
+                data-title="高雄駁二店"><img class="example-image" src="img/space/kh2.jpg" alt="" /></a></li>
+            <li><a class="example-image-link" href="img/space/khb3.jpg" data-lightbox="example-set"
+                data-title="高雄駁二店"><img class="example-image" src="img/space/kh3.png" alt="" /></a></li>
           </ul>
 
           <ul class="bottom">
