--- a/tea.html
+++ b/tea.html
@@ -30,6 +30,7 @@
 </head>
 
 <body>
+  <a id="button"></a>
   <div class="overlay"></div>
   <!-- header start-->
   <header>
@@ -37,52 +38,52 @@
       <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
 
       <div class="nav_wrapper">
-      <div class="hamburger-menu">
-        <div class="bar"></div>
-      </div>
+        <div class="hamburger-menu">
+          <div class="bar"></div>
+        </div>
 
-      <nav class="mobile-menu">
-        <ul>
-          <li>
-            <a href="about.html">
-              <h4>關於品茶吧</h4>
-            </a>
-          </li>
-          <li class="has-children">
-            <a href="#">
-              <h4>服務項目</h4><span class="icon-arrow"></span>
-            </a>
-            <ol class="children">
-              <li>
-                <a href="tea.html">
-                  <h4>台灣紅茶</h4>
-                </a>
-              </li>
-              <li>
-                <a href="space.html">
-                  <h4>品茶空間</h4>
-                </a>
-              </li>
-            </ol>
-          </li>
-          <li>
-            <a href="reservation.html">
-              <h4>預約品茶</h4>
-            </a>
-          </li>
-          <li>
-            <a href="news.html">
-              <h4>最新消息</h4>
-            </a>
-          </li>
-          <li>
-            <a href="knowledge.html">
-              <h4>小茶識</h4>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+        <nav class="mobile-menu">
+          <ul>
+            <li>
+              <a href="about.html">
+                <h4>關於品茶吧</h4>
+              </a>
+            </li>
+            <li class="has-children">
+              <a href="#">
+                <h4>服務項目</h4><span class="icon-arrow"></span>
+              </a>
+              <ol class="children">
+                <li>
+                  <a href="tea.html">
+                    <h4>台灣紅茶</h4>
+                  </a>
+                </li>
+                <li>
+                  <a href="space.html">
+                    <h4>品茶空間</h4>
+                  </a>
+                </li>
+              </ol>
+            </li>
+            <li>
+              <a href="reservation.html">
+                <h4>預約品茶</h4>
+              </a>
+            </li>
+            <li>
+              <a href="news.html">
+                <h4>最新消息</h4>
+              </a>
+            </li>
+            <li>
+              <a href="knowledge.html">
+                <h4>小茶識</h4>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
   <!-- header end-->
