--- a/about.html
+++ b/about.html
@@ -1,206 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/about.css" />
-    <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>關於品茶吧</title>
 
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/about.css" />
+  <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <title>關於品茶吧</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+TC&display=swap" rel="stylesheet" />
 
-    <!-- title icon -->
-    <link rel="icon" href="img/LOGO.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
+    rel="stylesheet" />
 
-    <!-- FontAwesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <div class="overlay"></div>
+  <!-- title icon -->
+  <link rel="icon" href="img/LOGO.ico" type="image/x-icon" />
+
+  <!-- FontAwesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <a id="button"></a>
+  <div class="overlay"></div>
   <!-- header start-->
   <header>
     <div class="header_wrapper">
       <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
 
       <div class="nav_wrapper">
-      <div class="hamburger-menu">
-        <div class="bar"></div>
-      </div>
+        <div class="hamburger-menu">
+          <div class="bar"></div>
+        </div>
 
-      <nav class="mobile-menu">
-        <ul>
-          <li>
-            <a href="about.html">
-              <h4>關於品茶吧</h4>
-            </a>
-          </li>
-          <li class="has-children">
-            <a href="#">
-              <h4>服務項目</h4><span class="icon-arrow"></span>
-            </a>
-            <ol class="children">
-              <li>
-                <a href="tea.html">
-                  <h4>台灣紅茶</h4>
-                </a>
-              </li>
-              <li>
-                <a href="space.html">
-                  <h4>品茶空間</h4>
-                </a>
-              </li>
-            </ol>
-          </li>
-          <li>
-            <a href="reservation.html">
-              <h4>預約品茶</h4>
-            </a>
-          </li>
-          <li>
-            <a href="news.html">
-              <h4>最新消息</h4>
-            </a>
-          </li>
-          <li>
-            <a href="knowledge.html">
-              <h4>小茶識</h4>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+        <nav class="mobile-menu">
+          <ul>
+            <li>
+              <a href="about.html">
+                <h4>關於品茶吧</h4>
+              </a>
+            </li>
+            <li class="has-children">
+              <a href="#">
+                <h4>服務項目</h4><span class="icon-arrow"></span>
+              </a>
+              <ol class="children">
+                <li>
+                  <a href="tea.html">
+                    <h4>台灣紅茶</h4>
+                  </a>
+                </li>
+                <li>
+                  <a href="space.html">
+                    <h4>品茶空間</h4>
+                  </a>
+                </li>
+              </ol>
+            </li>
+            <li>
+              <a href="reservation.html">
+                <h4>預約品茶</h4>
+              </a>
+            </li>
+            <li>
+              <a href="news.html">
+                <h4>最新消息</h4>
+              </a>
+            </li>
+            <li>
+              <a href="knowledge.html">
+                <h4>小茶識</h4>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
   <!-- header end-->
 
-    <!-- title start-->
-    <div class="title">
-      <div class="title_wrapper">
-        <h1>關於品茶吧</h1>
+  <!-- title start-->
+  <div class="title">
+    <div class="title_wrapper">
+      <h1>關於品茶吧</h1>
+    </div>
+  </div>
+  <!-- title end-->
+
+  <!-- content start-->
+  <section class="content_wrapper">
+    <!-- content_crumb -->
+    <ul class="content_crumb">
+      <li><a href="index.html">首頁</a></li>
+      <li><a href="about.html">關於品茶吧</a></li>
+    </ul>
+    <!-- content_top -->
+    <div class="content_top">
+      <ul>
+        <li>
+          <h2>經營理念</h2>
+          <p data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="bottom-bottom">
+            品茶吧，就如同字面上的意思，希望能夠為喜好喝茶以及愛好茶文化的人們，提供一個舒適的品茶空間。
+            <br /><br />
+            而我們的茶都是台灣在地的高品質紅茶，產地分布於南投、花蓮及阿里山等地。
+            <br /><br />
+            期望每位來過品茶吧的客人，都能在這個小小空間裡放鬆地享受品茶片刻。
+          </p>
+        </li>
+        <li>
+          <img src="img/about/Rectangle 20.jpg" alt="" data-aos="fade-up-left" data-aos-duration="3000"
+            data-aos-anchor-placement="bottom-bottom" />
+          <span class="top_block"></span>
+        </li>
+      </ul>
+    </div>
+
+    <!-- content_bottom -->
+    <div class="content_bottom">
+      <ul>
+        <li>
+          <h2>我們的特色</h2>
+          <p data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="bottom-bottom">
+            酒有酒吧，茶也可以有茶吧。<br /><br />
+            品茶吧是個能夠與親朋好友們一同前來喝茶談天的好所在，也適合一人前往獨自享受品茶時光。
+            <br /><br />
+            我們準備了吧台的位子，無論是想安靜地品茶，或是想與吧台的茶師們交流茶經，品茶吧都非常歡迎您的到來。
+          </p>
+        </li>
+        <li>
+          <img src="img/about/Rectangle 21.jpg" alt="" data-aos="fade-up-right" data-aos-duration="3000"
+            data-aos-anchor-placement="bottom-bottom" />
+          <span class="bottom_block"></span>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!-- content end-->
+
+  <!-- footer start-->
+  <footer>
+    <div class="footer_wrapper">
+      <!-- footer_left -->
+      <div class="section_left">
+        <ul>
+          <li>
+            <h5>品茶吧(本店)</h5>
+          </li>
+          <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
+          <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
+          <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
+          <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
+        </ul>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
+          width="280" height="200" style="border: 0" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <!-- footer_right -->
+      <div class="section_right">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">關於品茶吧</a></li>
+          <li><a href="tea.html">服務項目</a></li>
+          <li><a href="reservation.html">預約品茶</a></li>
+          <li><a href="news.html">最新消息</a></li>
+          <li><a href="knowledge.html">小茶識</a></li>
+        </ul>
+        <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
       </div>
     </div>
-    <!-- title end-->
+    <!-- footer_bottom -->
+    <div class="section_bottom">
+      <p>
+        本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
+      </p>
+    </div>
+  </footer>
+  <!-- footer end-->
+  <script src="js/all.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+</body>
 
-    <!-- content start-->
-    <section class="content_wrapper">
-      <!-- content_crumb -->
-      <ul class="content_crumb">
-        <li><a href="index.html">首頁</a></li>
-        <li><a href="about.html">關於品茶吧</a></li>
-      </ul>
-      <!-- content_top -->
-      <div class="content_top">
-        <ul>
-          <li>
-            <h2>經營理念</h2>
-            <p data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom">
-              品茶吧，就如同字面上的意思，希望能夠為喜好喝茶以及愛好茶文化的人們，提供一個舒適的品茶空間。
-              <br /><br />
-              而我們的茶都是台灣在地的高品質紅茶，產地分布於南投、花蓮及阿里山等地。
-              <br /><br />
-              期望每位來過品茶吧的客人，都能在這個小小空間裡放鬆地享受品茶片刻。
-            </p>
-          </li>
-          <li>
-            <img src="img/about/Rectangle 20.png" alt="" data-aos="fade-up-left" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom"/>
-            <span class="top_block"></span>
-          </li>
-        </ul>
-      </div>
-
-      <!-- content_bottom -->
-      <div class="content_bottom">
-        <ul>
-          <li>
-            <h2>我們的特色</h2>
-            <p data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom">
-              酒有酒吧，茶也可以有茶吧。<br /><br />
-              品茶吧是個能夠與親朋好友們一同前來喝茶談天的好所在，也適合一人前往獨自享受品茶時光。
-              <br /><br />
-              我們準備了吧台的位子，無論是想安靜地品茶，或是想與吧台的茶師們交流茶經，品茶吧都非常歡迎您的到來。
-            </p>
-          </li>
-          <li>
-            <img src="img/about/Rectangle 21.png" alt="" data-aos="fade-up-right" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom"/>
-            <span class="bottom_block"></span>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <!-- content end-->
-
-    <!-- footer start-->
-    <footer>
-      <div class="footer_wrapper">
-        <!-- footer_left -->
-        <div class="section_left">
-          <ul>
-            <li><h5>品茶吧(本店)</h5></li>
-            <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
-            <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
-            <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
-            <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
-          </ul>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
-            width="280"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <!-- footer_right -->
-        <div class="section_right">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">關於品茶吧</a></li>
-            <li><a href="tea.html">服務項目</a></li>
-            <li><a href="reservation.html">預約品茶</a></li>
-            <li><a href="news.html">最新消息</a></li>
-            <li><a href="knowledge.html">小茶識</a></li>
-          </ul>
-          <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
-        </div>
-      </div>
-      <!-- footer_bottom -->
-      <div class="section_bottom">
-        <p>
-          本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
-        </p>
-      </div>
-    </footer>
-    <!-- footer end-->
-    <script src="js/all.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
 </html>
