--- a/reservation.html
+++ b/reservation.html
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reservation.css" />
-    <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-    <title>預約品茶</title>
 
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/reservation.css" />
+  <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.10.3/sweetalert2.css" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <title>預約品茶</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet" />
 
-    <!-- title icon -->
-    <link rel="icon" href="img/LOGO.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+TC&display=swap" rel="stylesheet" />
 
-    <!-- FontAwesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <div class="overlay"></div>
-    <!-- header start-->
-    <header>
-      <div class="header_wrapper">
-        <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
-  
-        <div class="nav_wrapper">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
+    rel="stylesheet" />
+
+  <!-- title icon -->
+  <link rel="icon" href="img/LOGO.ico" type="image/x-icon" />
+
+  <!-- FontAwesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <a id="button"></a>
+  <div class="overlay"></div>
+  <!-- header start-->
+  <header>
+    <div class="header_wrapper">
+      <a href="index.html"><img src="img/pincha.svg" alt="" /></a>
+
+      <div class="nav_wrapper">
         <div class="hamburger-menu">
           <div class="bar"></div>
         </div>
-  
+
         <nav class="mobile-menu">
           <ul>
             <li>
@@ -93,92 +86,89 @@
           </ul>
         </nav>
       </div>
-      </div>
-    </header>
-    <!-- header end-->
-    <!-- title start-->
-    <div class="title">
-      <div class="title_wrapper">
-        <h1>預約品茶</h1>
-      </div>
     </div>
-    <!-- title end-->
+  </header>
+  <!-- header end-->
+  <!-- title start-->
+  <div class="title">
+    <div class="title_wrapper">
+      <h1>預約品茶</h1>
+    </div>
+  </div>
+  <!-- title end-->
 
-    <!-- content start-->
-    <section class="content_wrapper">
-      <!-- content_crumb -->
-      <ul class="content_crumb">
-        <li><a href="index.html">首頁</a></li>
-        <li><a href="reservation.html">預約品茶</a></li>
-      </ul>
-      <!-- content_top -->
-      <h2>預約注意事項</h2>
-      <div class="content_top">
-        <i class="fa-solid fa-bullhorn"></i><span>預約須知</span>
-        <p>
-          1.本店每日可預約時間至夜間7點為止<br />
-          2.品茶吧接受30天內線上預訂。若需取消或更改預訂，請提前告知。<br />
-          3.訂位將保留15分鐘，如逾時將視場狀況重新安排座位。品茶時間限時110分鐘。
-        </p>
-        <i class="fa-solid fa-mug-hot"></i><span>低消</span>
-        <p>每人最低消費為NTD$500元，並需加收一成服務費。</p>
-        <i class="fa-solid fa-people-group"></i><span>團體活動</span>
-        <p>
-          6人以上的團體須支付30%訂金，以轉帳或匯款方式支付。若需獨立私密空間之特殊活動或包場，請於營業時間來電。
-        </p>
-        <i class="fa-solid fa-book"></i><span>其他注意事項</span>
-        <p>
-          為了提供貴客完美品茶體驗與品質、尊重每位用心服務的員工及其他品茶客人，故品茶吧制定上述說明，謝謝您的體諒與配合。
-        </p>
-      </div>
+  <!-- content start-->
+  <section class="content_wrapper">
+    <!-- content_crumb -->
+    <ul class="content_crumb">
+      <li><a href="index.html">首頁</a></li>
+      <li><a href="reservation.html">預約品茶</a></li>
+    </ul>
+    <!-- content_top -->
+    <h2>預約注意事項</h2>
+    <div class="content_top">
+      <i class="fa-solid fa-bullhorn"></i><span>預約須知</span>
+      <p>
+        1.本店每日可預約時間至夜間7點為止<br />
+        2.品茶吧接受30天內線上預訂。若需取消或更改預訂，請提前告知。<br />
+        3.訂位將保留15分鐘，如逾時將視場狀況重新安排座位。品茶時間限時110分鐘。
+      </p>
+      <i class="fa-solid fa-mug-hot"></i><span>低消</span>
+      <p>每人最低消費為NTD$500元，並需加收一成服務費。</p>
+      <i class="fa-solid fa-people-group"></i><span>團體活動</span>
+      <p>
+        6人以上的團體須支付30%訂金，以轉帳或匯款方式支付。若需獨立私密空間之特殊活動或包場，請於營業時間來電。
+      </p>
+      <i class="fa-solid fa-book"></i><span>其他注意事項</span>
+      <p>
+        為了提供貴客完美品茶體驗與品質、尊重每位用心服務的員工及其他品茶客人，故品茶吧制定上述說明，謝謝您的體諒與配合。
+      </p>
+    </div>
 
-      <!-- content_bottom -->
-      <h2>填寫訂位資訊</h2>
+    <!-- content_bottom -->
+    <h2>填寫訂位資訊</h2>
+    <form id="form1" name="form1" method="post" action="">
+
       <div class="content_bottom">
+
         <ul>
           <!-- input1 -->
           <li>
-            <label
-              ><p>訂位人姓名</p>
-              <input type="text" class="name" placeholder="請輸入真實姓名"
-            /></label>
-            <span
-              ><label>
-                <input type="radio" class="female" name="XXX" />小姐</label
-              ></span
-            >
-            <label
-              ><input type="radio" class="male" name="XXX" /><span
-                >先生</span
-              ></label
-            >
+            <label>
+              <p>訂位人姓名*</p>
+              <input type="text" name="name" class="name" placeholder="請輸入真實姓名" />
+            </label>
+            <span><label>
+                <input type="radio" class="female" name="XXX" />小姐</label>
+              <label><input type="radio" class="male" name="XXX" />
+                先生</label></span>
           </li>
           <!-- input2 -->
           <li>
-            <label
-              ><p>訂位人手機號碼</p>
-              <input type="text" class="phone" placeholder="請輸入手機號碼"
-            /></label>
+            <label>
+              <p>訂位人手機號碼*</p>
+              <input type="text" name="phone" class="phone" placeholder="請輸入手機號碼" />
+            </label>
           </li>
           <!-- input3 -->
           <li>
-            <label
-              ><p>訂位人 Email</p>
-              <input type="text" class="email" placeholder="請輸入電子郵件地址"
-            /></label>
+            <label>
+              <p>訂位人 Email</p>
+              <input type="text" class="email" placeholder="請輸入電子郵件地址" />
+            </label>
           </li>
           <!-- input4 -->
           <li>
             <ol>
               <!-- input4.1 -->
               <li>
-                <p>品茶日期</p>
-                <input type="date" class="date" />
+                <p>品茶日期*</p>
+                <input type="date" class="date" name="date" />
               </li>
               <!-- input4.2 -->
               <li>
-                <p>品茶時段</p>
-                <input type="time" class="time" value="11:00" />
+                <p>品茶時段*</p>
+                <input type="time" class="time" name="time" value="11:00" />
               </li>
             </ol>
             <!-- input5 -->
@@ -187,8 +177,8 @@
             <ol>
               <!-- input5.1 -->
               <li>
-                <p>品茶人數</p>
-                <select class="partysize">
+                <p>品茶人數*</p>
+                <select class="partysize" name="partysize">
                   <option>請選擇品茶人數</option>
                   <option>1位</option>
                   <option>2位</option>
@@ -200,8 +190,8 @@
               </li>
               <!-- input5.2 -->
               <li>
-                <p>分店選擇</p>
-                <select class="store">
+                <p>分店選擇*</p>
+                <select class="store" name="store">
                   <option>請選擇分店</option>
                   <option>台北本店</option>
                   <option>台中勤美店</option>
@@ -213,13 +203,7 @@
           <!-- input6 -->
           <li>
             <p>其他備註</p>
-            <textarea
-              name=""
-              id=""
-              cols="30"
-              rows="5"
-              placeholder="有任何特殊需求嗎？可以先寫在這裡喔！（例如：行動不便、過敏）"
-            ></textarea>
+            <textarea name="" id="" cols="30" rows="5" placeholder="有任何特殊需求嗎？可以先寫在這裡喔！（例如：行動不便、過敏）"></textarea>
             <p></p>
           </li>
           <!-- input7 -->
@@ -227,55 +211,57 @@
             <input type="submit" class="send" value="確認訂位" />
           </li>
         </ul>
-      </div>
 
-      <!-- <input type="submit" class="send" value="確認訂位" /> -->
-    </section>
-    <!-- content end-->
+      </div>
+    </form>
 
-    <!-- footer start-->
-    <footer>
-      <div class="footer_wrapper">
-        <!-- footer_left -->
-        <div class="section_left">
-          <ul>
-            <li><h5>品茶吧(本店)</h5></li>
-            <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
-            <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
-            <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
-            <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
-          </ul>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
-            width="280"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <!-- footer_right -->
-        <div class="section_right">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">關於品茶吧</a></li>
-            <li><a href="tea.html">服務項目</a></li>
-            <li><a href="reservation.html">預約品茶</a></li>
-            <li><a href="news.html">最新消息</a></li>
-            <li><a href="knowledge.html">小茶識</a></li>
-          </ul>
-          <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
-        </div>
+    <!-- <input type="submit" class="send" value="確認訂位" /> -->
+  </section>
+  <!-- content end-->
+
+  <!-- footer start-->
+  <footer>
+    <div class="footer_wrapper">
+      <!-- footer_left -->
+      <div class="section_left">
+        <ul>
+          <li>
+            <h5>品茶吧(本店)</h5>
+          </li>
+          <li>台北市信義區光復南路133號<br />(捷運市政府站4號出口)</li>
+          <li><i class="fa-solid fa-phone"></i>(02)1234-5678</li>
+          <li><i class="fa-regular fa-envelope"></i>Servive@PinChaBar.com</li>
+          <li><i class="fa-regular fa-clock"></i>11:00-21:00</li>
+        </ul>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14458.847765573804!2d121.5606384!3d25.043848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc82b0f87ff7df9dc!2z5p2-5bGx5paH5Ym15ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1666614378036!5m2!1szh-TW!2stw"
+          width="280" height="200" style="border: 0" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <!-- footer_bottom -->
-      <div class="section_bottom">
-        <p>
-          本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
-        </p>
+      <!-- footer_right -->
+      <div class="section_right">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">關於品茶吧</a></li>
+          <li><a href="tea.html">服務項目</a></li>
+          <li><a href="reservation.html">預約品茶</a></li>
+          <li><a href="news.html">最新消息</a></li>
+          <li><a href="knowledge.html">小茶識</a></li>
+        </ul>
+        <a href="index.html"><img src="img/logo_white.svg" alt="" /></a>
       </div>
-    </footer>
-    <!-- footer end-->
-    <script src="js/all.js"></script>
-  </body>
+    </div>
+    <!-- footer_bottom -->
+    <div class="section_bottom">
+      <p>
+        本網站為緯育TibaMe前端工程師班第80期學員專題作品，本平台僅供學習、展示之用。參考資源：OKAPI/小隱茶庵/SCENTEA
+      </p>
+    </div>
+  </footer>
+  <!-- footer end-->
+  <script src="js/all.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.10.3/sweetalert2.js"
+    type="text/javascript"></script>
+</body>
+
 </html>
