--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@
     <div class="content_tea">
       <h2>嚴選台灣紅茶</h2>
       <ul>
-        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement="center-bottom">
+        <li data-aos="zoom-out">
           <a href="tea.html"><img src="img/tea/tea1.png" alt="" />
             <h4>蜜香紅茶</h4>
           </a>
         </li>
-        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement="center-bottom">
+        <li data-aos="zoom-out">
           <a href="tea.html"><img src="img/tea/tea2.png" alt="" />
             <h4>紅韻紅茶</h4>
           </a>
         </li>
-        <li data-aos="zoom-out" data-aos-duration="3000" data-aos-anchor-placement="center-bottom">
+        <li data-aos="zoom-out">
           <a href="tea.html"><img src="img/tea/tea3.png" alt="" />
             <h4>紅玉紅茶</h4>
           </a>
@@ -132,21 +132,21 @@
     <div class="content_news">
       <h2>最新消息</h2>
       <ul>
-        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
+        <li data-aos="zoom-in">
           <a href="">
             <img src="img/news/pic1.png" alt="" />
             <h5>2022-10-18</h5>
             <h4>新品上市 花蓮蜜香紅茶</h4>
           </a>
         </li>
-        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
+        <li data-aos="zoom-in">
           <a href="">
             <img src="img/news/pic2.png" alt="" />
             <h5>2022-10-12</h5>
             <h4>SGS檢驗合格 讓您安心品茶</h4>
           </a>
         </li>
-        <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
+        <li data-aos="zoom-in">
           <a href="">
             <img src="img/news/pic3.png" alt="" />
             <h5>2022-10-01</h5>
@@ -202,7 +202,7 @@
   <script src="js/all.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
-    AOS.init();
+    AOS.init({duration: 1000});
   </script>
 </body>
 
