--- a/reservation.html
+++ b/reservation.html
@@ -139,7 +139,7 @@
               <input type="text" name="name" class="name" placeholder="請輸入真實姓名" />
             </label>
             <span><label>
-                <input type="radio" class="female" name="XXX" />小姐</label>
+                <input type="radio" class="female" name="XXX" checked />小姐</label>
               <label><input type="radio" class="male" name="XXX" />
                 先生</label></span>
           </li>
@@ -187,19 +187,22 @@
                   <option>5位</option>
                   <option>6位</option>
                 </select>
+
               </li>
               <!-- input5.2 -->
               <li>
                 <p>分店選擇*</p>
                 <select class="store" name="store">
                   <option>請選擇分店</option>
-                  <option>台北本店</option>
-                  <option>台中勤美店</option>
-                  <option>高雄駁二店</option>
+                  <option>台北本店(02)1234-5678</option>
+                  <option>台中勤美店(04)2234-5678</option>
+                  <option>高雄駁二店(07)323-4567</option>
                 </select>
               </li>
             </ol>
           </li>
+
+          <p class="partysize_text">各分店可接受 1-6 位訂位 * 超過 6 人的訂位，請使用電話預約</p>
           <!-- input6 -->
           <li>
             <p>其他備註</p>
