--- a/news.html
+++ b/news.html
@@ -119,21 +119,21 @@
       <!-- content_news -->
       <div class="content_news">
         <ul>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic1.png" alt="" />
               <h5>2022-10-18</h5>
               <h4>新品上市 花蓮蜜香紅茶</h4>
             </a>
           </li>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic2.png" alt="" />
               <h5>2022-10-12</h5>
               <h4>SGS檢驗合格 讓您安心品茶</h4>
             </a>
           </li>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="bottom-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic3.png" alt="" />
               <h5>2022-10-01</h5>
@@ -143,21 +143,21 @@
         </ul>
 
         <ul>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic4.png" alt="" />
               <h5>2022-09-30</h5>
               <h4>天氣轉涼 來杯熱茶吧</h4>
             </a>
           </li>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic5.png" alt="" />
               <h5>2022-09-26</h5>
               <h4>09/28員工旅遊 店休一天</h4>
             </a>
           </li>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic6.png" alt="" />
               <h5>2022-09-10</h5>
@@ -167,21 +167,21 @@
         </ul>
 
         <ul>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic7.png" alt="" />
               <h5>2022-08-31</h5>
               <h4>集合啦！品茶會</h4>
             </a>
           </li>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic8.png" alt="" />
               <h5>2022-08-04</h5>
               <h4>＃情人節 打卡招待茶食</h4>
             </a>
           </li>
-          <li data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement ="center-bottom">
+          <li data-aos="zoom-in">
             <a href="">
               <img src="img/news/pic9.png" alt="" />
               <h5>2022-08-01</h5>
@@ -239,7 +239,7 @@
     <script src="js/all.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({duration:1000});
     </script>
   </body>
 </html>
